--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,24 @@
-# Dependencies
-node_modules/
-package-lock.json
-
-# Environment
-.env
-.env.local
-.env.*.local
-
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
 
 # Editor directories and files
-.idea/
-.vscode/
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# System Files
-.DS_Store
-Thumbs.db
