correcciones y colocacion nombre de usuario en chat

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ logging.level.org.springframework.web=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 # Configuración de la API de OpenAI
-# IMPORTANTE: Reemplaza "tu-api-key-aqui" con tu clave real de OpenAI
+# IMPORTANTE: API key configurada directamente
 openai.api.key=${OPENAI_API_KEY}
 openai.api.url=https://api.openai.com/v1/chat/completions
 
