--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.web.resources.add-mappings=false
 # Configuración de la base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/homeworkclick
 spring.datasource.username=postgres
-spring.datasource.password=nico-fajardo
+spring.datasource.password=sago-code
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
