--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "devDependencies": {
-    "vite": "^7.1.2"
+    "jsdom": "^24.0.0",
+    "vite": "^7.1.2",
+    "vitest": "^4.0.3"
   },
   "dependencies": {
-    "axios": "^1.12.0"
+    "axios": "^1.12.0",
+    "jsdon": "^0.2.3"
   }
 }
